--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>810</width>
-    <height>610</height>
+    <width>812</width>
+    <height>612</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -59,7 +59,7 @@
         <item row="1" column="0">
          <widget class="QLabel" name="length_label">
           <property name="text">
-           <string>Length:</string>
+           <string>Length(m):</string>
           </property>
          </widget>
         </item>
@@ -142,7 +142,7 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>810</width>
+     <width>812</width>
      <height>24</height>
     </rect>
    </property>
